<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="wrap_content"
              android:layout_height="wrap_content"
              android:background="@color/white"
              android:orientation="vertical"
              android:paddingLeft="20dp"
              android:paddingRight="20dp">

    <TextView
        android:id="@+id/tv_verify_msg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="40dp"
        android:text="@string/not_verify_user"
        android:textColor="@color/black"
        android:textSize="@dimen/text_size"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="30dp"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_dialog_verify"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:background="@drawable/button_selected"
            android:gravity="center"
            android:text="@string/verify"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"/>

        <Button
            android:id="@+id/btn_dialog_cancel"
            android:layout_width="100dp"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:background="@drawable/button_selected"
            android:gravity="center"
            android:text="@string/cancel"
            android:textAllCaps="false"
            android:textSize="@dimen/text_size"/>
    </LinearLayout>

</LinearLayout>