<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical">

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:orientation="vertical">

        <ImageView
            android:src="@drawable/right"
            android:layout_width="50dp"
            android:layout_height="50dp"
            android:layout_gravity="center"/>

        <TextView
            android:id="@+id/tv_confirm_thnx"
            android:layout_width="100dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="10dp"
            android:text="@string/thank"
            android:textColor="@color/black"
            android:textSize="@dimen/text_size"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/tv_confirm_msg"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="7dp"
            android:gravity="center"
            android:text="@string/confirm_msg"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <TextView
            android:id="@+id/tv_register_code"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="25dp"
            android:gravity="center"
            android:text="@string/register_code"
            android:textColor="@color/black"
            android:textSize="14sp"
            />

        <EditText
            android:id="@+id/et_register_code"
            android:layout_width="200dp"
            android:layout_height="@dimen/register_section"
            android:layout_marginTop="10dp"
            android:background="@drawable/rectangle_border"
            android:gravity="center"/>

        <Button
            android:id="@+id/btn_verify_mail"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_alignParentTop="true"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/button_selected"
            android:gravity="center"
            android:text="@string/verify_mail"
            android:textAllCaps="false"
            android:textSize="@dimen/custom_food_font"/>

    </LinearLayout>
</RelativeLayout>