<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:background="@color/white"
                android:orientation="horizontal">

    <TextView
        android:id="@+id/tv_clearAll"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_centerVertical="true"
        android:layout_marginLeft="10dp"
        android:text="@string/clear_all"
        android:textColor="@color/pink"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_action_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:textColor="@color/black"
        android:textSize="15sp"
        android:textStyle="bold"
        />

    <ImageView
        android:id="@+id/img_action_icon"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"/>

    <TextView
        android:id="@+id/tv_delete_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:text="@string/delete"
        android:textColor="@color/pink"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        />

    <TextView
        android:id="@+id/tv_done_action"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true"
        android:layout_marginRight="10dp"
        android:text="@string/done"
        android:textColor="@color/pink"
        android:textSize="15sp"
        android:textStyle="bold"
        android:visibility="gone"
        />

</RelativeLayout>