<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/light_gray"
              android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_close_customFood"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginStart="10dp"
            android:src="@drawable/close"/>

        <TextView
            android:id="@+id/tv_customFood_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/add_recipes"
            android:textColor="@color/black"
            android:textSize="15sp"
            android:textStyle="bold"/>

        <ImageView

            android:id="@+id/img_add_customFood"
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="10dp"
            android:src="@drawable/done"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/black"></View>

    <EditText

        android:id="@+id/et_custom_itemName"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:background="@color/white"
        android:focusable="false"
        android:gravity="center_vertical"
        android:hint="@string/enter_food"
        android:paddingLeft="10dp"
        android:paddingRight="10dp"
        android:textColor="@color/black"
        android:textColorHint="@color/dark_gray"
        android:textSize="@dimen/custom_food_font"/>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/black"></View>

    <LinearLayout
        android:id="@+id/lnr_custom_servingSize"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <TextView
            android:id="@+id/tv_custom_servingSize"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:layout_marginStart="10dp"
            android:text="@string/serving_size"
            android:textColor="@color/black"/>

        <EditText
            android:id="@+id/et_custom_servingSize_value"
            android:layout_width="150dp"
            android:layout_height="@dimen/register_section"
            android:layout_gravity="center_vertical"
            android:layout_marginEnd="20dp"
            android:background="@drawable/rectangle_border"
            android:gravity="center"
            android:numeric="integer"
            android:textColor="@color/pink"/>

        <TextView
            android:id="@+id/tv_unit_name"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/gram"/>

        <ImageView
            android:id="@+id/img_custom_serving_arrow"
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp"
            android:src="@drawable/right_arrow"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/black"></View>

    <include
        layout="@layout/create_custom_food"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:layout_marginTop="5dp"></include>

</LinearLayout>