<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:background="@color/light_gray"
              android:orientation="vertical">

    <include
        android:id="@+id/actionbar_setting"
        layout="@layout/actionbar_default"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        >

    </include>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_below="@+id/actionbar_setting"
        android:background="@color/black"/>

    <View
        android:id="@+id/view_setting"
        android:layout_width="match_parent"
        android:layout_height=".5dp"

        android:layout_marginTop="40dp"
        android:background="@color/black"/>

    <LinearLayout
        android:id="@+id/lnr_setting_guide"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_setting_guide"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/guide"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow"/>

    </LinearLayout>

    <View
        android:id="@+id/view_terms"
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:background="@color/black"></View>

    <LinearLayout
        android:id="@+id/lnr_setting_terms"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_setting_terms"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/terms"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <ImageView
            android:layout_width="15dp"
            android:layout_height="15dp"
            android:layout_gravity="center_vertical"
            android:src="@drawable/right_arrow"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_below="@+id/rltv_setting_terms"
        android:background="@color/black"></View>

    <!-- Language Section -->

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_marginTop="50dp"
        android:background="@color/black"></View>

    <LinearLayout
        android:id="@+id/lnr_language"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@color/white"
        android:orientation="horizontal"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">

        <TextView
            android:id="@+id/tv_language"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_weight="1"
            android:text="@string/lang"
            android:textColor="@color/black"
            android:textSize="16sp"/>

        <TextView
            android:id="@+id/tv_language_selected"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:textColor="@color/pink"
            android:textSize="16sp"/>

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height=".5dp"
        android:layout_below="@+id/rltv_setting_terms"
        android:background="@color/black"></View>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <Button
            android:id="@+id/btn_logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="20dp"
            android:layout_marginLeft="30dp"
            android:layout_marginRight="30dp"
            android:background="@drawable/button_selected"
            android:gravity="center"
            android:text="@string/logout"
            android:textAllCaps="false"
            android:textSize="@dimen/custom_food_font"/>
    </RelativeLayout>


</LinearLayout>