<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:paddingLeft="15dp"
                android:paddingRight="15dp">

    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"/>

    <LinearLayout
        android:id="@+id/lnr_login"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:background="@drawable/rectangle_border"
        android:orientation="vertical"
        android:paddingLeft="20dp"
        android:paddingRight="20dp">
        <!-- Password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/reigster_section"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_new_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/password"/>

            <EditText

                android:id="@+id/et_new_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:background="@drawable/rectangle_border"
                android:paddingLeft="10dp"
                android:singleLine="true"/>
        </LinearLayout>

        <!-- Confirm password -->
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/reigster_section"
            android:layout_marginTop="20dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/tv_confirm_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:gravity="center_vertical"
                android:text="@string/confirm_password"/>

            <EditText

                android:id="@+id/et_confirm_password"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_marginLeft="10dp"
                android:layout_weight="2"
                android:background="@drawable/rectangle_border"
                android:paddingLeft="10dp"
                android:singleLine="true"/>
        </LinearLayout>

        <Button
            android:id="@+id/btn_save_Password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/button_height"
            android:layout_marginBottom="30dp"
            android:layout_marginTop="30dp"
            android:background="@drawable/button_selected"
            android:gravity="center"
            android:text="@string/new_password"
            android:textSize="@dimen/text_size"/>

    </LinearLayout>


    <ImageView
        android:layout_width="50dp"
        android:layout_height="50dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="20dp"/>

</RelativeLayout>